# awe-agentforge

./: .dockerignore  .gitignore  CHANGELOG.auto.md  Dockerfile  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
docs/: API_EXPOSURE_AUDIT.md  ARCHITECTURE_FLOW.md  GITHUB_ABOUT.md  RUNBOOK.md  SESSION_HANDOFF.md
docs/plans/: 2026-02-18-langgraph-backend-and-cli-subprocess-baseline.md  2026-02-21-memory-runtime-controls.md
scripts/: overnight_autoevolve.py  start_api.ps1  start_overnight_until_7.ps1
src/awe_agentcheck/: adapters.py  api.py  automation.py  cli.py  config.py  db.py  main.py  observability.py  participants.py  policy_templates.py  proposal_contract.py  proposal_helpers.py  repository.py  service.py  service_layers.py  task_options.py  workflow.py  workflow_architecture.py  workflow_prompting.py  workflow_runtime.py
src/awe_agentcheck/adapters/: __init__.py  base.py  claude.py  codex.py  factory.py  gemini.py  runner.py
src/awe_agentcheck/domain/: __init__.py  events.py
src/awe_agentcheck/prompt_templates/: debate_reply_prompt.txt  debate_review_prompt.txt  discussion_after_reviewer_prompt.txt  discussion_prompt.txt  implementation_prompt.txt  proposal_author_prompt.txt  proposal_review_prompt.txt  review_prompt.txt
src/awe_agentcheck/service_layers/: __init__.py  analytics.py  evidence.py  history.py  memory.py  task_management.py
src/awe_agentcheck/storage/: artifacts.py
tests/: conftest.py
tests/integration/: test_orchestrator_flow.py
tests/unit/: test_adapters.py  test_api.py  test_artifacts.py  test_automation.py  test_cli.py  test_config.py  test_coverage_touchups.py  test_dashboard_static.py  test_db_indexes.py  test_db_timezone.py  test_dockerfile_static.py  test_gate.py  test_main.py  test_observability.py  test_participants.py  test_repository_meta.py  test_service.py  test_service_layers.py  test_task_management_service.py  test_task_options.py  test_workflow.py  test_workflow_architecture_extra.py  test_workflow_static_more.py
web/: index.html
web/assets/: dashboard.js
web/assets/modules/: api.js  avatar.js  create_task_help.js  dialogue.js  history.js  store.js  tree.js  ui.js  utils.js
